# inapps-pybackend

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
docs/: index.md  installation.md  usage.md
src/inapps_pybackend/: __init__.py  cli.py
src/inapps_pybackend/appstore/: appstore.py  exceptions.py
src/inapps_pybackend/appstore/tests/: test_appstore.py
src/inapps_pybackend/validators/: apple_validator.py  google_validator.py
tests/: __init__.py  test_inapps_pybackend.py
