[project]
name = "inapps-pybackend"
version = "0.1.0"
description = "Complete backend support for managing inapp products and validating transactions"
readme = "README.md"
authors = [
  {name = "Jawad Khan", email = "jawadkhan444@gmail.com"}
]
maintainers = [
  {name = "Jawad Khan", email = "jawadkhan444@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "inapppy==2.5.2",
    "pyjwt[crypto]",
    "typer",

]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
    "mock"
]

[project.urls]
bugs = "https://github.com/jawad-khan/inapps_pybackend/issues"
changelog = "https://github.com/jawad-khan/inapps_pybackend/blob/master/changelog.md"
homepage = "https://github.com/jawad-khan/inapps_pybackend"

[project.scripts]
inapps_pybackend = "inapps_pybackend.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
